feat: 카메라 권한 요청 및 카메라 실행 구현
- 카메라 권한 요청
- 갤러리 이미지 권한 요청
- 카메라 실행

--- a/app/src/main/res/layout/fragment_find_face.xml
+++ b/app/src/main/res/layout/fragment_find_face.xml
@@ -33,6 +33,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="to history"/>
+        <Button
+            android:id="@+id/camera_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="show camera"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
