--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,12 +23,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text">
         <Button
-            android:id="@+id/history"
+            android:id="@+id/history_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="to history"/>
         <Button
-            android:id="@+id/start_btn"
+            android:id="@+id/select_picture_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="select picture"/>
