--- a/app/src/main/res/layout/view_celebrity.xml
+++ b/app/src/main/res/layout/view_celebrity.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="이름: "
+            android:text="일치율: "
             android:textSize="15sp"/>
         <TextView
             android:id="@+id/confidence_txt"
