feat: 연예인 찾기 및 얼굴 정보 화면에 shimmer 추가

--- a/app/src/main/res/layout/view_gender.xml
+++ b/app/src/main/res/layout/view_gender.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/gender_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/icon_female"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,11 +25,11 @@
         <TextView
             android:id="@+id/gender_txt"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
         <ProgressBar
             android:id="@+id/gender_progressbar"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="15dp"
             android:max="100"
             android:scaleY="3"
             android:layout_marginEnd="10dp"
