--- a/app/src/main/res/layout/fragment_find_face_result.xml
+++ b/app/src/main/res/layout/fragment_find_face_result.xml
@@ -11,59 +11,30 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:radius="@{@dimen/space1}"
-                android:background="@color/background"
-                android:padding="@dimen/space1"
-                android:layout_margin="@dimen/space1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/selected_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="300dp"
-                    android:layout_gravity="center_horizontal"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:padding="@dimen/space1"/>
-
-                <TextView
-                    android:id="@+id/age_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:padding="4dp"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-
-                <LinearLayout
+                android:layout_height="wrap_content">
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_face_info_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/space1"
-                    android:orientation="vertical">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <com.example.myapplication.view.GenderView
-                        android:id="@+id/child_gender_view"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:gender="child"/>
+                        android:orientation="vertical">
+                        <include layout="@layout/layout_face_info_shimmer" />
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
 
-                    <com.example.myapplication.view.GenderView
-                        android:id="@+id/male_gender_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:gender="male"/>
+               <include
+                   android:id="@+id/layout_face_info"
+                   layout="@layout/layout_face_info"/>
 
-                    <com.example.myapplication.view.GenderView
-                        android:id="@+id/female_gender_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:gender="female"/>
-
-                </LinearLayout>
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -71,16 +42,36 @@
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:text="닮은 연예인"
-                android:padding="@dimen/space1"/>
+                android:paddingStart="@dimen/space1"
+                android:layout_marginBottom="5dp"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/celebrity_list"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_height="wrap_content">
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_celebrities_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <include layout="@layout/layout_celebrities_shimmer" />
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/celebrity_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 </layout>
