feat: 카카오 공유하기를 통해 접근한 경우 분기처리

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,9 +60,12 @@
     <fragment
         android:id="@+id/historyDetailFragment"
         android:name="com.example.myapplication.HistoryDetailFragment"
-        android:label="HistoryDetailFragment" >
+        android:label="HistoryDetailFragment">
         <argument
             android:name="fid"
             app:argType="long" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="kakaoce657d783b6b9e9df95bc640f5f92f6a://kakaolink?action={action}&amp;fid={fid}" />
     </fragment>
 </navigation>
