feat: 즐겨찾기 등록 및 취소 기능 구현

--- a/app/src/main/res/layout/view_history.xml
+++ b/app/src/main/res/layout/view_history.xml
@@ -6,6 +6,15 @@
     android:padding="12dp">
 
     <ImageView
+        android:id="@+id/favorite_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/border_favorite"
+        app:tint="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
         android:id="@+id/profile_img"
         android:layout_width="100dp"
         android:layout_height="100dp"
