--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF6063</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="green">#4CAF50</color>
 
     <color name="background">#E9F1F6</color>
     <color name="male">#2196F3</color>
